2004-04-13  Quentin Mathe <qmathe@club-internet.fr>

       * Source/NSToolbarItem.m:
       * Headers/AppKit/NSToolbarItem.h: 
       * Source/NSToolbar.m:
       * Headers/AppKit/NSToolbar.h:
       * Source/GSToolbar.m:
       * Headers/GNUstepGUI/GSToolbar.h:
       * Source/GSToolbarView.m:
       * Headers/GNUstepGUI/GSToolbarView.h:
       * Source/NSWindow+Toolbar.m:
       * Headers/AppKit/NSWindow+Toolbar.h:
       Added support for display mode and size mode and other minor changes.

2004-04-09  Kazunobu Kuriyama <kazunobu.kuriyama@nifty.com>

	* Documentation/GuiUser/LanguageSetup.gsdoc: Added Korean stuff.
	  (Thanks to Song Woo-il.)

2004-04-04  Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit.h: Added NSNib.h to the #ifndef STRICT_OPENSTEP
	section of the headers.
	
2004-04-02  Quentin Mathe <qmathe@club-internet.fr>

        With the help of Fred Kiefer and Alexander Malmberg, the modifications
	below are mainly introduced to fix the fact -[NSCell performClick:] 
	doesn't work correctly when the cell frame is not identical to the control 
	frame which is displaying it :
        * Source/NSButton.m: Removed -performClick: method already present in
	the superclass NSControl.
	* Headers/AppKit/NSButton.h: Same.
	* Source/NSButtonCell.m: Replaced -performClick: method by
	-performClickWithFrame:inView: method which overrides new method with
	the same name in the superclass NSCell.
	* Headers/AppKit/NSButtonCell.h: Same
	* Source/NSCell.m: Added a method -performClickWithFrame:inView:
	to be used in place of -performClick: method which has been deprecated.
	* Headers/AppKit/NSCell.h: Same
	* Source/NSControl.m: Modified -performClick: method to use the new
	NSCell method -performClickWithFrame:inView:.
        * Source/NSPopUpButtonCell.m: Modified -performClickWithFrame:inView: to
	override the new method with the same name in the superclass NSCell.

2004-04-02  Quentin Mathe <qmathe@club-internet.fr>
